[tool.poetry]
name = "wolai-python"
version = "0.0.1"
description = ""
authors = ["Ricter Z <ricterzheng@gmail.com>"]
readme = "README.md"
packages = [{include = "wolai"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
